--- a/AgeCalculator_APP/Views/Shared/_Layout.cshtml
+++ b/AgeCalculator_APP/Views/Shared/_Layout.cshtml
@@ -22,7 +22,12 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Person" asp-action="CalculateAge">Yaş Hesapla</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PeopleInformation" asp-action="Index">Kişi Arama</a>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="PieChart" asp-action="Index">Cinsiyet - Pie Chart</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BarChart" asp-action="Index">Yaş Ortalaması - Bar Chart</a>
                         </li>
                     </ul>
                 </div>
