Useless classes are deleted.

--- a/AgeCalculator_APP/Views/Home/Index.cshtml
+++ b/AgeCalculator_APP/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 <div class="text-center">
     <h1 class="display-4">Hoşgeldiniz...</h1>
     <p>
-        Merhabalar, ben, Ege Üniversitesi Bilgisayar Mügendisliği 4. Sınıf öğrencisi Muhammed Salih TATAR. 
+        Merhabalar, ben, Ege Üniversitesi Bilgisayar Mühendisliği 4. Sınıf öğrencisi Muhammed Salih TATAR. 
         Bu web sitesi Web Tabanlı Windows Programlama dönem projesi olarak yapılmıştır. 
         Bu web sitesinde yaşınızı hesaplayabilir ve yaş hesaplayan diğer insanlarla ilgili çeşitli istatistiksel verilere ve grafiklere ulaşabilirsiniz.
     </p>
