--- a/AgeCalculator_APP/Views/PeopleInformation/Index.cshtml
+++ b/AgeCalculator_APP/Views/PeopleInformation/Index.cshtml
@@ -4,7 +4,11 @@
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
+<style>
+    .table span {
+        display: none;
+    }
+</style>
 <table id="table1" class="table table-bordered">
     <thead>
         <tr>
@@ -26,7 +30,7 @@
                 <td>@person.Name</td>
                 <td>@person.Surname</td>
                 <td>@person.GenderName</td>
-                <td>@person.BirthDate.Value</td>
+                <td><span>@person.BirthDate.Value.ToString("yyyyMMdd")</span>@person.BirthDate.Value.ToString("dd/MM/yyyy")</td>
                 <td>@person.Age</td>
                 <td>@person.CityName</td>
             </tr>
