--- a/AgeCalculator_APP/Views/Chart/Index.cshtml
+++ b/AgeCalculator_APP/Views/Chart/Index.cshtml
@@ -21,7 +21,7 @@
                 type: "POST",
                 dataType: "json",
                 contentType: "application/json",
-                url: '@Url.Action("VisualizeGenderResult", "PieChart")',
+                url: '@Url.Action("VisualizeGenderResult", "Chart")',
                 success: function (result) {
                     google.charts.load('current', {
                         'packages': ['corechart']
@@ -35,7 +35,7 @@
                 type: "POST",
                 dataType: "json",
                 contentType: "application/json",
-                url: '@Url.Action("VisualizeAgeMeanResult", "BarChart")',
+                url: '@Url.Action("VisualizeAgeMeanResult", "Chart")',
                 success: function (result) {
                     google.charts.load('current', {
                         'packages': ['corechart']
@@ -99,6 +99,7 @@
 </head>
 <body>
     <div class="container">
+        <h3 class="text-center">HOŞGELDİNİZ...</h3>
         <div class="row">
             <div class="col-6">
                 <div id="piechart_div"></div>
